--- a/common.vi.po
+++ b/common.vi.po
@@ -1,7 +1,7 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# 
+#
 # Translators:
 msgid ""
 msgstr ""
@@ -10,11 +10,12 @@ msgstr ""
 "POT-Creation-Date: 2024-06-02 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: Vietnamese (http://app.transifex.com/team-xonotic/xonotic/language/vi/)\n"
+"Language-Team: Vietnamese (http://app.transifex.com/team-xonotic/xonotic/"
+"language/vi/)\n"
+"Language: vi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: vi\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 
 #: qcsrc/client/hud/hud_config.qc:80
@@ -952,8 +953,8 @@ msgstr ""
 
 #: qcsrc/client/hud/panel/scoreboard.qc:720
 msgid ""
-"^2scoreboard_columns_set ^3expand_default ^7loads default layout and expands"
-" it into the cvar scoreboard_columns so you can edit it"
+"^2scoreboard_columns_set ^3expand_default ^7loads default layout and expands "
+"it into the cvar scoreboard_columns so you can edit it"
 msgstr ""
 
 #: qcsrc/client/hud/panel/scoreboard.qc:721
@@ -1213,28 +1214,23 @@ msgstr ""
 msgid "Trying to remove a team which is not in the teamlist!"
 msgstr ""
 
-#: qcsrc/client/main.qc:1162
-#: qcsrc/menu/xonotic/dialog_settings_game_hud.qc:165
+#: qcsrc/client/main.qc:1162 qcsrc/menu/xonotic/dialog_settings_game_hud.qc:165
 msgid "qu/s"
 msgstr ""
 
-#: qcsrc/client/main.qc:1163
-#: qcsrc/menu/xonotic/dialog_settings_game_hud.qc:166
+#: qcsrc/client/main.qc:1163 qcsrc/menu/xonotic/dialog_settings_game_hud.qc:166
 msgid "m/s"
 msgstr ""
 
-#: qcsrc/client/main.qc:1164
-#: qcsrc/menu/xonotic/dialog_settings_game_hud.qc:167
+#: qcsrc/client/main.qc:1164 qcsrc/menu/xonotic/dialog_settings_game_hud.qc:167
 msgid "km/h"
 msgstr ""
 
-#: qcsrc/client/main.qc:1165
-#: qcsrc/menu/xonotic/dialog_settings_game_hud.qc:168
+#: qcsrc/client/main.qc:1165 qcsrc/menu/xonotic/dialog_settings_game_hud.qc:168
 msgid "mph"
 msgstr ""
 
-#: qcsrc/client/main.qc:1166
-#: qcsrc/menu/xonotic/dialog_settings_game_hud.qc:169
+#: qcsrc/client/main.qc:1166 qcsrc/menu/xonotic/dialog_settings_game_hud.qc:169
 msgid "knots"
 msgstr ""
 
@@ -1769,8 +1765,7 @@ msgid "It's your turn"
 msgstr ""
 
 #: qcsrc/common/minigames/cl_minigames_hud.qc:363
-#: qcsrc/menu/xonotic/dialog_gamemenu.qc:67
-#: qcsrc/menu/xonotic/dialog_quit.qh:6
+#: qcsrc/menu/xonotic/dialog_gamemenu.qc:67 qcsrc/menu/xonotic/dialog_quit.qh:6
 msgid "Quit"
 msgstr ""
 
@@ -1919,8 +1914,7 @@ msgstr ""
 
 #: qcsrc/common/minigames/minigame/nmm.qc:621
 msgid ""
-"You can select one of your pieces to move it in one of the surrounding "
-"places"
+"You can select one of your pieces to move it in one of the surrounding places"
 msgstr ""
 
 #: qcsrc/common/minigames/minigame/nmm.qc:623
@@ -2544,8 +2538,8 @@ msgstr ""
 #: qcsrc/common/notifications/all.inc:253
 #, c-format
 msgid ""
-"^BGThe ^TC^TT^BG flag became impatient after ^F1%.2f^BG seconds and returned"
-" itself"
+"^BGThe ^TC^TT^BG flag became impatient after ^F1%.2f^BG seconds and returned "
+"itself"
 msgstr ""
 
 #: qcsrc/common/notifications/all.inc:254
@@ -3727,8 +3721,7 @@ msgstr ""
 #: qcsrc/common/notifications/all.inc:509
 #, c-format
 msgid ""
-"^BG%s^K1 was sawn in half by their own Overkill Rocket Propelled "
-"Chainsaw%s%s"
+"^BG%s^K1 was sawn in half by their own Overkill Rocket Propelled Chainsaw%s%s"
 msgstr ""
 
 #: qcsrc/common/notifications/all.inc:510
@@ -4652,8 +4645,8 @@ msgstr ""
 
 #: qcsrc/common/notifications/all.inc:786
 msgid ""
-"^K1You are forced to spectate and you aren't allowed to play because you are"
-" banned in this server"
+"^K1You are forced to spectate and you aren't allowed to play because you are "
+"banned in this server"
 msgstr ""
 
 #: qcsrc/common/notifications/all.inc:788
@@ -6242,8 +6235,8 @@ msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_firstrun.qc:91
 msgid ""
-"Player statistics are enabled by default, you can change this in the Profile"
-" menu"
+"Player statistics are enabled by default, you can change this in the Profile "
+"menu"
 msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_firstrun.qc:95
@@ -7000,13 +6993,11 @@ msgstr ""
 msgid "Panel background defaults:"
 msgstr ""
 
-#: qcsrc/menu/xonotic/dialog_hudsetup_exit.qc:48
-#: qcsrc/menu/xonotic/util.qc:759
+#: qcsrc/menu/xonotic/dialog_hudsetup_exit.qc:48 qcsrc/menu/xonotic/util.qc:759
 msgid "Background:"
 msgstr ""
 
-#: qcsrc/menu/xonotic/dialog_hudsetup_exit.qc:60
-#: qcsrc/menu/xonotic/util.qc:775
+#: qcsrc/menu/xonotic/dialog_hudsetup_exit.qc:60 qcsrc/menu/xonotic/util.qc:775
 msgid "Border size:"
 msgstr ""
 
@@ -7015,13 +7006,11 @@ msgstr ""
 msgid "Team color:"
 msgstr ""
 
-#: qcsrc/menu/xonotic/dialog_hudsetup_exit.qc:83
-#: qcsrc/menu/xonotic/util.qc:801
+#: qcsrc/menu/xonotic/dialog_hudsetup_exit.qc:83 qcsrc/menu/xonotic/util.qc:801
 msgid "Test team color in configure mode"
 msgstr ""
 
-#: qcsrc/menu/xonotic/dialog_hudsetup_exit.qc:86
-#: qcsrc/menu/xonotic/util.qc:804
+#: qcsrc/menu/xonotic/dialog_hudsetup_exit.qc:86 qcsrc/menu/xonotic/util.qc:804
 msgid "Padding:"
 msgstr ""
 
@@ -7384,8 +7373,8 @@ msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_multiplayer_create_mutators.qc:134
 msgid ""
-"Enable buff pickups (random bonuses like Medic, Invisible, etc.) on the maps"
-" that support it"
+"Enable buff pickups (random bonuses like Medic, Invisible, etc.) on the maps "
+"that support it"
 msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_multiplayer_create_mutators.qc:139
@@ -7416,8 +7405,8 @@ msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_multiplayer_create_mutators.qc:174
 msgid ""
-"Players spawn with the jetpack. Double-tap 'jump' or press the 'jetpack' key"
-" to use it"
+"Players spawn with the jetpack. Double-tap 'jump' or press the 'jetpack' key "
+"to use it"
 msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_multiplayer_create_mutators.qc:178
@@ -7479,8 +7468,8 @@ msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_multiplayer_create_mutators.qc:242
 msgid ""
-"Players will be given only one weapon, which can instantly kill the opponent"
-" with a single shot. If the player runs out of ammo, they will have 10 "
+"Players will be given only one weapon, which can instantly kill the opponent "
+"with a single shot. If the player runs out of ammo, they will have 10 "
 "seconds to find some or if they fail to do so, face death. The secondary "
 "fire mode does not inflict any damage but is good for doing trickjumps."
 msgstr ""
@@ -7541,7 +7530,8 @@ msgid "Pause"
 msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_multiplayer_join.qc:63
-msgid "Pause updating the server list to prevent servers from \"jumping around\""
+msgid ""
+"Pause updating the server list to prevent servers from \"jumping around\""
 msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_multiplayer_join.qc:75
@@ -8017,8 +8007,7 @@ msgstr ""
 msgid "User"
 msgstr ""
 
-#: qcsrc/menu/xonotic/dialog_settings.qc:25
-#: qcsrc/menu/xonotic/keybinder.qc:121
+#: qcsrc/menu/xonotic/dialog_settings.qc:25 qcsrc/menu/xonotic/keybinder.qc:121
 msgid "Misc"
 msgstr ""
 
@@ -8168,8 +8157,8 @@ msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_settings_audio.qc:140
 msgid ""
-"Enable spatialization (blend the right and left channel slightly to decrease"
-" stereo separation a bit for headphones)"
+"Enable spatialization (blend the right and left channel slightly to decrease "
+"stereo separation a bit for headphones)"
 msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_settings_audio.qc:144
@@ -8440,8 +8429,8 @@ msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_settings_effects.qc:147
 msgid ""
-"Offset mapping effect that will make textures with bumpmaps appear like they"
-" \"pop out\" of the flat 2D surface"
+"Offset mapping effect that will make textures with bumpmaps appear like they "
+"\"pop out\" of the flat 2D surface"
 msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_settings_effects.qc:149
@@ -8633,8 +8622,8 @@ msgstr ""
 #: qcsrc/menu/xonotic/dialog_settings_effects.qc:247
 #: qcsrc/menu/xonotic/slider_particles.qc:13
 msgid ""
-"Multiplier for amount of particles. Less means less particles, which in turn"
-" gives for better performance"
+"Multiplier for amount of particles. Less means less particles, which in turn "
+"gives for better performance"
 msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_settings_effects.qc:254
@@ -8732,8 +8721,8 @@ msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_settings_game_hud.qc:56
 msgid ""
-"Team size position: Off=do not show; Left=on the left side of the scoreboard"
-" and move team scores to the right; Right=on the right of the scoreboard"
+"Team size position: Off=do not show; Left=on the left side of the scoreboard "
+"and move team scores to the right; Right=on the right of the scoreboard"
 msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_settings_game_hud.qc:64
@@ -9206,8 +9195,8 @@ msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_settings_game_weapons.qc:57
 msgid ""
-"Automatically switch to newly picked up weapons if they are better than what"
-" you are carrying"
+"Automatically switch to newly picked up weapons if they are better than what "
+"you are carrying"
 msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_settings_game_weapons.qc:60
@@ -9516,8 +9505,7 @@ msgid "Advanced settings..."
 msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_settings_misc.qc:142
-msgid ""
-"Advanced settings where you can tweak every single variable of the game"
+msgid "Advanced settings where you can tweak every single variable of the game"
 msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_settings_misc.qc:148
@@ -9578,8 +9566,7 @@ msgid "Disable gore effects and harsh language"
 msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_settings_user.qc:73
-msgid ""
-"Replace blood and gibs with content that does not have any gore effects"
+msgid "Replace blood and gibs with content that does not have any gore effects"
 msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_settings_user_languagewarning.qc:10
@@ -9740,8 +9727,8 @@ msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_settings_video.qc:104
 msgid ""
-"Eliminate overdraw by rendering a depth-only version of the scene before the"
-" normal rendering starts"
+"Eliminate overdraw by rendering a depth-only version of the scene before the "
+"normal rendering starts"
 msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_settings_video.qc:105
@@ -9914,8 +9901,7 @@ msgid "spectate"
 msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_termsofservice.qc:78
-msgid ""
-"Terms of Service have been updated. Please read them before continuing:"
+msgid "Terms of Service have been updated. Please read them before continuing:"
 msgstr ""
 
 #: qcsrc/menu/xonotic/dialog_termsofservice.qc:80
@@ -10180,8 +10166,8 @@ msgstr ""
 
 #: qcsrc/menu/xonotic/serverlist.qc:268
 msgid ""
-"Bookmark the currently highlighted server so that it's faster to find in the"
-" future"
+"Bookmark the currently highlighted server so that it's faster to find in the "
+"future"
 msgstr ""
 
 #: qcsrc/menu/xonotic/serverlist.qc:754
